--- a/src/gui/RegistrarView.fxml
+++ b/src/gui/RegistrarView.fxml
@@ -1,11 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <content>
-      <Button contentDisplay="TOP" mnemonicParsing="false" text="Registrar" textAlignment="JUSTIFY" translateX="530.0" translateY="370.0" />
-   </content>
-</ScrollPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="568.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="317.0" prefWidth="598.0">
+         <children>
+            <Label layoutX="14.0" prefHeight="55.0" prefWidth="256.0" text="REGISTRAR USUÁRIO">
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="64.0" text="Nome:">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="98.0" layoutY="76.0" prefHeight="25.0" prefWidth="465.0" />
+            <Label layoutX="14.0" layoutY="101.0" text="Telefone">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="98.0" layoutY="113.0" prefHeight="25.0" prefWidth="166.0" />
+            <Label layoutX="14.0" layoutY="138.0" text="Idade:">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="98.0" layoutY="150.0" prefHeight="25.0" prefWidth="53.0" />
+            <Label layoutX="14.0" layoutY="175.0" text="Endereço:">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="98.0" layoutY="188.0" prefHeight="25.0" prefWidth="465.0" />
+            <Label layoutX="14.0" layoutY="213.0" text="Email:">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="99.0" layoutY="225.0" prefHeight="25.0" prefWidth="465.0" />
+            <Button layoutX="487.0" layoutY="278.0" mnemonicParsing="false" text="REGISTRAR" />
+         </children>
+      </AnchorPane>
+   </children>
+</VBox>
