--- a/src/gui/RegistrarView.fxml
+++ b/src/gui/RegistrarView.fxml
@@ -28,7 +28,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="nome" layoutX="98.0" layoutY="76.0" onAction="#onTextFieldNomeAction" prefHeight="25.0" prefWidth="465.0" />
+            <TextField fx:id="textFieldNome" layoutX="98.0" layoutY="76.0" onAction="#onTextFieldNomeAction" prefHeight="25.0" prefWidth="465.0" />
             <Label layoutX="14.0" layoutY="101.0" text="Telefone">
                <padding>
                   <Insets top="10.0" />
@@ -37,7 +37,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="telefone" layoutX="98.0" layoutY="113.0" onAction="#onTextFieldTelefoneAction" prefHeight="25.0" prefWidth="166.0" />
+            <TextField fx:id="textFieldTelefone" layoutX="98.0" layoutY="113.0" onAction="#onTextFieldTelefoneAction" prefHeight="25.0" prefWidth="166.0" />
             <Label layoutX="14.0" layoutY="138.0" text="Idade:">
                <padding>
                   <Insets top="10.0" />
@@ -46,7 +46,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="idade" layoutX="98.0" layoutY="150.0" onAction="#onTextFieldIdadeAction" prefHeight="25.0" prefWidth="53.0" />
+            <TextField fx:id="textFieldIdade" layoutX="98.0" layoutY="150.0" onAction="#onTextFieldIdadeAction" prefHeight="25.0" prefWidth="53.0" />
             <Label layoutX="14.0" layoutY="175.0" text="Endereço:">
                <padding>
                   <Insets top="10.0" />
@@ -55,7 +55,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="endereco" layoutX="98.0" layoutY="188.0" onAction="#onTextFieldEnderecoAction" prefHeight="25.0" prefWidth="465.0" />
+            <TextField fx:id="textFieldEndereco" layoutX="98.0" layoutY="188.0" onAction="#onTextFieldEnderecoAction" prefHeight="25.0" prefWidth="465.0" />
             <Label layoutX="14.0" layoutY="213.0" text="Email:">
                <padding>
                   <Insets top="10.0" />
@@ -64,8 +64,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="email" layoutX="99.0" layoutY="225.0" onAction="#onTextFieldEmailAction" prefHeight="25.0" prefWidth="465.0" />
-            <Button fx:id="registrar" layoutX="487.0" layoutY="278.0" mnemonicParsing="false" onAction="#onButtonRegistrarAction" text="REGISTRAR" />
+            <TextField fx:id="textFieldEmail" layoutX="99.0" layoutY="225.0" onAction="#onTextFieldEmailAction" prefHeight="25.0" prefWidth="465.0" />
+            <Button fx:id="ButtonRegistrar" layoutX="487.0" layoutY="278.0" mnemonicParsing="false" onAction="#onButtonRegistrarAction" text="REGISTRAR" />
          </children>
       </AnchorPane>
    </children>
